fix: refatora segurança, exceções e configuração de ambiente
- Renomeia CustomUserDetailsService para JpaUserDetailsService
- Renomeia UnauthorizedEntryPoint para RestAuthenticationEntryPoint e
  altera Content-Type da resposta de application/json para text/plain
- Refatora GlobalExceptionHandler: reordena handlers, adiciona handler
  para ConflictException e HttpMessageNotReadableException, simplifica
  lambda do MethodArgumentNotValidException e atualiza mensagem de
  BadCredentialsException
- Externaliza configurações sensíveis (datasource e JWT) para variáveis
  de ambiente via application.properties
- Adiciona spring-dotenv ao pom.xml para leitura automática do .env
- Adiciona .env.example com as variáveis necessárias para o projeto
- Adiciona Dockerfile para containerização da aplicação
- Atualiza docker-compose.yml com as novas variáveis de ambiente
- Atualiza .gitignore para ignorar o arquivo .env
- Substitui value.trim().isEmpty() por value.isBlank() no
  NotBlankIfPresentValidator
- Ativa exibição e formatação de SQL no JPA (show-sql e format_sql)